add more references
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/book.bib
+++ b/book.bib
@@ -202,3 +202,35 @@ url = {http://link.springer.com/10.1007/BF03025718},
 volume = {213},
 year = {1993}
 }
+
+@article{Guzzo2015,
+abstract = {The Nekhoroshev theorem has been often indicated in the last decades as the reference theorem for explaining the dynamics of several systems which are stable in the long-term. The Solar System dynamics provides a wide range of possible and useful applications. In fact, despite the complicated models which are used to numerically integrate realistic Solar System dynamics as accurately as possible, when the integrated solutions are chaotic the reliability of the numerical integrations is limited, and a theoretical long-term stability analysis is required. After the first formulation of Nekhoroshev's theorem in 1977, many theoretical improvements have been achieved. On the one hand, alternative proofs of the theorem itself led to consistent improvements of the stability estimates; on the other hand, the extensions which were necessary to apply the theorem to the systems of interest for Solar System Dynamics, in particular concerning the removal of degeneracies and the implementation of computer assisted proofs, have been developed. In this review paper we discuss some of the motivations and the results which have made Nekhoroshev's theorem a reference stability result for many applications in the Solar System dynamics.},
+author = {Guzzo, M.},
+doi = {10.2298/SAJ1590001G},
+file = {:Users/mseri/Documents/Mendeley/Guzzo/Serbian Astronomical Journal/Guzzo - 2015 - The nekhoroshev theorem and long-term stabilities in the solar system.pdf:pdf},
+issn = {1450698X},
+journal = {Serbian Astronomical Journal},
+keywords = {Celestial mechanics,Chaos,General,Solar System},
+number = {190},
+pages = {1--10},
+title = {{The Nekhoroshev theorem and long-term stabilities in the solar system}},
+volume = {1},
+year = {2015}
+}
+
+@article{Broer2004,
+abstract = {Kolmogorov-Arnold-Moser (or KAM) theory was developed for conservative dynamical systems that are nearly integrable. Integrable systems in their phase space usually contain lots of invariant tori, and KAM theory establishes persistence results for such tori, which carry quasi-periodic motions. We sketch this theory, which begins with Kolmogorov's pioneering work.},
+author = {Broer, Henk W.},
+doi = {10.1090/S0273-0979-04-01009-2},
+file = {:Users/mseri/Documents/Mendeley/Broer/Bulletin of the American Mathematical Society/Broer - 2004 - Kam theory The legacy of kolmogorov's 1954 paper(2).pdf:pdf},
+issn = {0273-0979},
+journal = {Bulletin of the American Mathematical Society},
+month = {feb},
+number = {04},
+pages = {507--522},
+title = {{KAM theory: The legacy of Kolmogorov's 1954 paper}},
+url = {http://www.ams.org/journal-getitem?pii=S0273-0979-04-01009-2},
+volume = {41},
+year = {2004}
+}
+
