--- a/main.tex
+++ b/main.tex
@@ -6129,8 +6129,7 @@ From the physical point of view, the KAM theorem makes a probabilistic statement
 Every proof of KAM theorem is complicated.
 After all, KAM theory is ``one of the big mathematical achievements'' of the 20th century, as commented by Winfried Scharlau in 1992 on the occasion of the award of the Cantor medal to J\"urgen Moser.
 We will omit the proof here, and refer the interested reader to \cite[Chapter 15]{book:knauf} and \cite{poschel2001}.
-
-% Add Broer Kolmo100.pdf: some applications of KAM theorem
+For a nice and readable account of KAM theory and its developments, you can refer to \cite{Broer2004}.
 
 \section{Nekhoroshev theorem}
 
@@ -6187,7 +6186,7 @@ Finally, given a poisitive number $\delta >0$, we denote $\cI_\delta \subset\cI$
 \end{theorem}
 
 This theorem does not exclude the chaotic motion of the variables $I$, but guarantees that their variation remains small for extremely long times -- which may for example surpass the lifetime of the physical system itself.
-In fact, one of the most important outcomes of Nekhoroshev is the long--term stability of various celestial systems. To cite a few, it helped understand motions observed in the asteroid belt and to show the stability of the motion of some restricted planetary problems (for example, the Sun-Jupiter-Saturn system or the planar Sun-Jupiter-Saturn-Uranus system), for which it implies that they remain close to an invariant torus of the system for times comparable to Solar System lifetime.
+In fact, one of the most important outcomes of Nekhoroshev is the long--term stability of various celestial systems. To cite a few, it helped understand motions observed in the asteroid belt and to show the stability of the motion of some restricted planetary problems (for example, the Sun-Jupiter-Saturn system or the planar Sun-Jupiter-Saturn-Uranus system), for which it implies that they remain close to an invariant torus of the system for times comparable to Solar System lifetime \cite{Guzzo2015}.
 Indeed, one of the motivations behind Nekhoroshev idea is the analysis of the stability of the Trojan asteroids and the $L_4, L_5$ Lagrange points of equilibiria.
 
 
