make the index fit
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/main.tex
+++ b/main.tex
@@ -5091,7 +5091,7 @@ In this case, the function $S$ becomes $S(q,b) = \sum_{i=1}^n W_i(q^i, b)$ and t
     Deermine the conjugate momenta associated to the variables $v$ and $u$ and show that the corresponding hamiltonian system is separable.
 \end{exercise}
 
-\section{Completely integrable systems: the Liouville-Arnold theorem}\label{sec:intsys}
+\section{The Liouville-Arnold theorem}\label{sec:intsys}
 
 We have seen that the equations of motion of a lagrangian with one degree of freedom are integrable by quadratures.
 In fact, throughout the previous chapters we have seen more.
