Various edits and fixes
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

Add picture reference

Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/book.bib
+++ b/book.bib
@@ -1,236 +1,262 @@
-@book{book:arnold,
-  title={Mathematical methods of classical mechanics},
-  author={Arnold, Vladimir I.},
-  volume={60},
-  series={Graduate Texts in Mathematics},
-  year={1989},
-  edition={2nd edition},
-  publisher={Springer-Verlag, New York},
-  doi={10.1007/978-1-4757-2063-1}
-}
-
-@book{book:knauf,
-  title={Mathematical physics: classical mechanics},
-  author={Knauf, Andreas},
-  series={UNITEXT},
-  volume={109},
-  year={2018},
-  publisher={Springer, New York},
-  doi={10.1007/978-3-662-55774-7}
-}
-
-@book{book:lee,
-  title={Introduction to Smooth Manifolds},
-  author={J.M., Lee},
-  series={Graduate Texts in Mathematics},
-  volume={218},
-  year={2013},
-  publisher={Springer, New York},
-  doi={10.1007/978-1-4419-9982-5}
-}
-
-@book{book:lowenstein,
-    title={Essentials of Hamiltonian Dynamics}, 
-    publisher={Cambridge University Press},
-    author={Lowenstein, John H.},
-    year={2012},
-    doi={10.1017/CBO9780511793721}
-}
-
-@book{book:marsdenratiu,
-  title={Introduction to Mechanics and Symmetry},
-  author={Marsden, Jerold E. and Ratiu, Tudor S.},
-  year={1999},
-  publisher={Springer, New York},
-  series={Texts in Applied Mathematics},
-  volume={17},
-  edition={2nd},
-  doi={10.1007/978-0-387-21792-5}
-}
-
-@misc{lectures:dubrovin,
-  author={Dubrovin, Boris},
-  title={Appunti sulla MECCANICA ANALITICA},
-  year={2010},
-  note={Unpublished lecture notes (in Italian)},
-  url={https://archive.org/details/Boris_DUBROVIN___Meccanica_Analitica}
-}
-
-@book{book:laplace,
-  author={Laplace, Pierre Simon},
-  title = {A Philosophical Essay on Probabilities},
-  note={translated into English from the original French 6th ed. by Truscott, F.W. and Emory, F.L.},
-  editor={Dover Publications, New York},
-  year={1951}
-}
-
-@misc{lectures:tong,
-  author={Tong, David},
-  title={Classical Dynamics},
-  year=2005,
-  note={Unbpublished lecture notes},
-  url={http://www.damtp.cam.ac.uk/user/tong/dynamics/clas.pdf}
-}
-
-@misc{lectures:baez,
-  author={Baez, John C. and Wise, Derek K.},
-  title={Lectures on Classical Dynamics},
-  year=2005,
-  note={Unbpublished lecture notes},
-  url={http://www.math.ucr.edu/home/baez/classical/texfiles/2005/book/classical_20180116.pdf}
-}
-
-@book{book:sicm,
-  title = {Structure and Interpretation of Classical Mechanics},
-  author={Sussman, Gerald J. and Wisdom, Jack},
-  year=2015,
-  editor={MIT Press},
-  url={https://mitpress.mit.edu/books/structure-and-interpretation-classical-mechanics-second-edition}
-}
-
-@book{book:arnoldcelestial,
-  title={Mathematical Aspects of Classical and Celestial Mechanics},
-  author={Arnold, Vladimir I. and Kozlov, Valery V. and Neishtadt, Anatoly I.},
-  volume={3},
-  series={Encyclopaedia of Mathematical Sciences},
-  year={2006},
-  edition={3rd edition},
-  publisher={Springer-Verlag, Berlin, Heidelberg},
-  doi={10.1007/978-3-540-48926-9}
-}
-
-@book{book:celletti,
-  title={Stability and Chaos in Celestial Mechanics},
-  author={Arnold, Vladimir Igorevich},
-  year={2010},
-  publisher={Springer-Verlag, Berlin, Heidelberg},
-  doi={10.1007/978-3-540-85146-2}
+@article{Benettin1985,
+  abstract = {In the present paper we give a proof of Nekhoroshev's theorem, which is concerned with an exponential estimate for the stability times in nearly integrable Hamiltonian systems. At variance with the already published proof, which refers to the case of an unperturbed Hamiltonian having the generic property of steepness, we consider here the particular case of a convex unperturbed Hamiltonian. The corresponding simplification in the proof might be convenient for an introduction to the subject. {\textcopyright} 1985 D. Reidel Publishing Company.},
+  author   = {Benettin, Giancarlo and Galgani, Luigi and Giorgilli, Antonio},
+  doi      = {10.1007/BF01230338},
+  issn     = {00088174},
+  journal  = {Celestial Mechanics},
+  number   = {1},
+  pages    = {1--25},
+  title    = {{A proof of Nekhoroshev's theorem for the stability times in nearly integrable Hamiltonian systems}},
+  volume   = {37},
+  year     = {1985}
 }
 
 @article{Bolsinov_1995,
-	doi = {10.1070/rm1995v050n03abeh002100},
-	url = {https://doi.org/10.1070%2Frm1995v050n03abeh002100},
-	year = 1995,
-	month = {jun},
-	publisher = {{IOP} Publishing},
-	volume = {50},
-	number = {3},
-	pages = {473--501},
-	author = {A V Bolsinov and V V Kozlov and A T Fomenko},
-	title = {The Maupertuis principle and geodesic flows on the sphere arising from integrable cases in the dynamics of a rigid body},
-	journal = {Russian Mathematical Surveys},
-	abstract = {Contents Introduction  §1. The general Maupertuis principle  §2. The Maupertuis principle in the dynamics of a massive rigid body  §3. The Maupertuis principle and the explicit form of the metric generated on the sphere by a quadratic Hamiltonian on the Lie algebra of the group of motions of R3 §4. Classical cases of integrability in rigid body dynamics and the corresponding geodesic flows on the sphere  §5. Integrable metrics on the torus and on the sphere  §6. Conjectures  §7. The complexity of integrable geodesic flows of 1-2-metrics on the sphere and on the torus  §8. A rougher conjecture: the complexities of non-singularly integrable metrics on the sphere or on the torus coincide with those of the known integrable 1-2-metrics  §9. The geodesic flow on an ellipsoid is topologically orbitally equivalent to the Euler integral case in the dynamics of a rigid body 
+  doi       = {10.1070/rm1995v050n03abeh002100},
+  url       = {https://doi.org/10.1070%2Frm1995v050n03abeh002100},
+  year      = 1995,
+  month     = {jun},
+  publisher = {{IOP} Publishing},
+  volume    = {50},
+  number    = {3},
+  pages     = {473--501},
+  author    = {A V Bolsinov and V V Kozlov and A T Fomenko},
+  title     = {The Maupertuis principle and geodesic flows on the sphere arising from integrable cases in the dynamics of a rigid body},
+  journal   = {Russian Mathematical Surveys},
+  abstract  = {Contents Introduction  §1. The general Maupertuis principle  §2. The Maupertuis principle in the dynamics of a massive rigid body  §3. The Maupertuis principle and the explicit form of the metric generated on the sphere by a quadratic Hamiltonian on the Lie algebra of the group of motions of R3 §4. Classical cases of integrability in rigid body dynamics and the corresponding geodesic flows on the sphere  §5. Integrable metrics on the torus and on the sphere  §6. Conjectures  §7. The complexity of integrable geodesic flows of 1-2-metrics on the sphere and on the torus  §8. A rougher conjecture: the complexities of non-singularly integrable metrics on the sphere or on the torus coincide with those of the known integrable 1-2-metrics  §9. The geodesic flow on an ellipsoid is topologically orbitally equivalent to the Euler integral case in the dynamics of a rigid body 
 Bibliography}
 }
 
-@book{book:gelfand,
-  title={Calculus of Variations},
-  author={Gelfand, I.M. and Fomin, S.V.},
-  isbn={9780486414485},
-  series={Dover Books on Mathematics},
-  year={2000},
-  publisher={Dover Publications, New York}
+@book{book:arnold,
+  title     = {Mathematical methods of classical mechanics},
+  author    = {Arnold, Vladimir I.},
+  volume    = {60},
+  series    = {Graduate Texts in Mathematics},
+  year      = {1989},
+  edition   = {2nd edition},
+  publisher = {Springer-Verlag, New York},
+  doi       = {10.1007/978-1-4757-2063-1}
+}
+
+@book{book:arnoldcelestial,
+  title     = {Mathematical Aspects of Classical and Celestial Mechanics},
+  author    = {Arnold, Vladimir I. and Kozlov, Valery V. and Neishtadt, Anatoly I.},
+  volume    = {3},
+  series    = {Encyclopaedia of Mathematical Sciences},
+  year      = {2006},
+  edition   = {3rd edition},
+  publisher = {Springer-Verlag, Berlin, Heidelberg},
+  doi       = {10.1007/978-3-540-48926-9}
 }
 
 @book{book:broer,
-  title={Near the horizon: an invitation to geometric optics},
-  author={Broer, H.W.},
-  series={The Carus Mathematical Monographs},
-  volume={33},
-  editor={MAA},
-  year={2016}
+  title  = {Near the horizon: an invitation to geometric optics},
+  author = {Broer, H.W.},
+  series = {The Carus Mathematical Monographs},
+  volume = {33},
+  editor = {MAA},
+  year   = {2016}
 }
 
-@MISC{WikipediaEN:LPS,
-    author = {{Wikimedia Commons}},
-    title = {Lagrange points},
-    year = {2009},
-    note = {[Online; accessed February 20, 2020]},
-    url = {https://commons.wikimedia.org/wiki/File:Lagrange_points2.svg}
+@book{book:celletti,
+  title     = {Stability and Chaos in Celestial Mechanics},
+  author    = {Arnold, Vladimir Igorevich},
+  year      = {2010},
+  publisher = {Springer-Verlag, Berlin, Heidelberg},
+  doi       = {10.1007/978-3-540-85146-2}
 }
 
 @book{book:dasilva,
-  title = {Lectures on Symplectic Geometry},
-  author={da Silva, Ana Cannas},
-  year=2008,
-  volume={1764},
-  series={Lecture Notes in Mathematics},
-  doi={10.1007/978-3-540-45330-7},
-  editor={Springer-Verlag, Berlin, Heidelberg},
-  url={https://people.math.ethz.ch/~acannas/Papers/lsg.pdf}
+  title  = {Lectures on Symplectic Geometry},
+  author = {da Silva, Ana Cannas},
+  year   = 2008,
+  volume = {1764},
+  series = {Lecture Notes in Mathematics},
+  doi    = {10.1007/978-3-540-45330-7},
+  editor = {Springer-Verlag, Berlin, Heidelberg},
+  url    = {https://people.math.ethz.ch/~acannas/Papers/lsg.pdf}
 }
 
-@InCollection{poschel2001,
- Author = {J\"urgen {P\"oschel}},
- Title = {{A lecture on the classical KAM theorem.}},
- BookTitle = {{Smooth ergodic theory and its applications. Proceedings of the AMS summer research institute, Seattle, WA, USA, July 26--August 13, 1999}},
- ISBN = {0-8218-2682-4/hbk},
- Pages = {707--732},
- Year = {2001},
- Publisher = {Providence, RI: American Mathematical Society (AMS)},
- MSC2010 = {37K55 37J40 37-02 70H08},
- Zbl = {0999.37053},
- doi={10.1090/pspum/069},
- url={http://www.poschel.de/pbl/kam-1.pdf}
+@book{book:gelfand,
+  title     = {Calculus of Variations},
+  author    = {Gelfand, I.M. and Fomin, S.V.},
+  isbn      = {9780486414485},
+  series    = {Dover Books on Mathematics},
+  year      = {2000},
+  publisher = {Dover Publications, New York}
 }
 
-@article{Benettin1985,
-abstract = {In the present paper we give a proof of Nekhoroshev's theorem, which is concerned with an exponential estimate for the stability times in nearly integrable Hamiltonian systems. At variance with the already published proof, which refers to the case of an unperturbed Hamiltonian having the generic property of steepness, we consider here the particular case of a convex unperturbed Hamiltonian. The corresponding simplification in the proof might be convenient for an introduction to the subject. {\textcopyright} 1985 D. Reidel Publishing Company.},
-author = {Benettin, Giancarlo and Galgani, Luigi and Giorgilli, Antonio},
-doi = {10.1007/BF01230338},
-file = {:Users/mseri/Documents/Mendeley/Benettin, Galgani, Giorgilli/Celestial Mechanics/Benettin, Galgani, Giorgilli - 1985 - A proof of Nekhoroshev's theorem for the stability times in nearly integrable Hamiltonian systems.pdf:pdf},
-issn = {00088174},
-journal = {Celestial Mechanics},
-number = {1},
-pages = {1--25},
-title = {{A proof of Nekhoroshev's theorem for the stability times in nearly integrable Hamiltonian systems}},
-volume = {37},
-year = {1985}
+@book{book:knauf,
+  title     = {Mathematical physics: classical mechanics},
+  author    = {Knauf, Andreas},
+  series    = {UNITEXT},
+  volume    = {109},
+  year      = {2018},
+  publisher = {Springer, New York},
+  doi       = {10.1007/978-3-662-55774-7}
 }
 
-@article{Poschel1993,
-author = {P{\"{o}}schel, J{\"{u}}rgen},
-doi = {10.1007/BF03025718},
-file = {:Users/mseri/Documents/Mendeley/P{\"{o}}schel/Mathematische Zeitschrift/P{\"{o}}schel - 1993 - Nekhoroshev estimates for quasi-convex hamiltonian systems.pdf:pdf},
-issn = {0025-5874},
-journal = {Mathematische Zeitschrift},
-month = {may},
-number = {1},
-pages = {187--216},
-title = {{Nekhoroshev estimates for quasi-convex hamiltonian systems}},
-url = {http://link.springer.com/10.1007/BF03025718},
-volume = {213},
-year = {1993}
+@book{book:laplace,
+  author = {Laplace, Pierre Simon},
+  title  = {A Philosophical Essay on Probabilities},
+  note   = {translated into English from the original French 6th ed. by Truscott, F.W. and Emory, F.L.},
+  editor = {Dover Publications, New York},
+  year   = {1951}
 }
 
-@article{Guzzo2015,
-abstract = {The Nekhoroshev theorem has been often indicated in the last decades as the reference theorem for explaining the dynamics of several systems which are stable in the long-term. The Solar System dynamics provides a wide range of possible and useful applications. In fact, despite the complicated models which are used to numerically integrate realistic Solar System dynamics as accurately as possible, when the integrated solutions are chaotic the reliability of the numerical integrations is limited, and a theoretical long-term stability analysis is required. After the first formulation of Nekhoroshev's theorem in 1977, many theoretical improvements have been achieved. On the one hand, alternative proofs of the theorem itself led to consistent improvements of the stability estimates; on the other hand, the extensions which were necessary to apply the theorem to the systems of interest for Solar System Dynamics, in particular concerning the removal of degeneracies and the implementation of computer assisted proofs, have been developed. In this review paper we discuss some of the motivations and the results which have made Nekhoroshev's theorem a reference stability result for many applications in the Solar System dynamics.},
-author = {Guzzo, M.},
-doi = {10.2298/SAJ1590001G},
-file = {:Users/mseri/Documents/Mendeley/Guzzo/Serbian Astronomical Journal/Guzzo - 2015 - The nekhoroshev theorem and long-term stabilities in the solar system.pdf:pdf},
-issn = {1450698X},
-journal = {Serbian Astronomical Journal},
-keywords = {Celestial mechanics,Chaos,General,Solar System},
-number = {190},
-pages = {1--10},
-title = {{The Nekhoroshev theorem and long-term stabilities in the solar system}},
-volume = {1},
-year = {2015}
+
+@book{book:lee,
+  title     = {Introduction to Smooth Manifolds},
+  author    = {J.M., Lee},
+  series    = {Graduate Texts in Mathematics},
+  volume    = {218},
+  year      = {2013},
+  publisher = {Springer, New York},
+  doi       = {10.1007/978-1-4419-9982-5}
+}
+
+@book{book:ll,
+  title     = {Mechanics: Volume 1},
+  author    = {Landau, L.D. and Lifshitz, E.M.},
+  isbn      = {9780750628969},
+  lccn      = {76018997},
+  series    = {Butterworth-Heinemann},
+  year      = {1976},
+  publisher = {Elsevier Science}
+}
+
+@book{book:lowenstein,
+  title     = {Essentials of Hamiltonian Dynamics},
+  publisher = {Cambridge University Press},
+  author    = {Lowenstein, John H.},
+  year      = {2012},
+  doi       = {10.1017/CBO9780511793721}
+}
+
+@book{book:marsdenratiu,
+  title     = {Introduction to Mechanics and Symmetry},
+  author    = {Marsden, Jerold E. and Ratiu, Tudor S.},
+  year      = {1999},
+  publisher = {Springer, New York},
+  series    = {Texts in Applied Mathematics},
+  volume    = {17},
+  edition   = {2nd},
+  doi       = {10.1007/978-0-387-21792-5}
+}
+
+@book{book:sicm,
+  title  = {Structure and Interpretation of Classical Mechanics},
+  author = {Sussman, Gerald J. and Wisdom, Jack},
+  year   = 2015,
+  editor = {MIT Press},
+  url    = {https://mitpress.mit.edu/books/structure-and-interpretation-classical-mechanics-second-edition}
 }
 
 @article{Broer2004,
-abstract = {Kolmogorov-Arnold-Moser (or KAM) theory was developed for conservative dynamical systems that are nearly integrable. Integrable systems in their phase space usually contain lots of invariant tori, and KAM theory establishes persistence results for such tori, which carry quasi-periodic motions. We sketch this theory, which begins with Kolmogorov's pioneering work.},
-author = {Broer, Henk W.},
-doi = {10.1090/S0273-0979-04-01009-2},
-file = {:Users/mseri/Documents/Mendeley/Broer/Bulletin of the American Mathematical Society/Broer - 2004 - Kam theory The legacy of kolmogorov's 1954 paper(2).pdf:pdf},
-issn = {0273-0979},
-journal = {Bulletin of the American Mathematical Society},
-month = {feb},
-number = {04},
-pages = {507--522},
-title = {{KAM theory: The legacy of Kolmogorov's 1954 paper}},
-url = {http://www.ams.org/journal-getitem?pii=S0273-0979-04-01009-2},
-volume = {41},
-year = {2004}
+  abstract = {Kolmogorov-Arnold-Moser (or KAM) theory was developed for conservative dynamical systems that are nearly integrable. Integrable systems in their phase space usually contain lots of invariant tori, and KAM theory establishes persistence results for such tori, which carry quasi-periodic motions. We sketch this theory, which begins with Kolmogorov's pioneering work.},
+  author   = {Broer, Henk W.},
+  doi      = {10.1090/S0273-0979-04-01009-2},
+  file     = {:Users/mseri/Documents/Mendeley/Broer/Bulletin of the American Mathematical Society/Broer - 2004 - Kam theory The legacy of kolmogorov's 1954 paper(2).pdf:pdf},
+  issn     = {0273-0979},
+  journal  = {Bulletin of the American Mathematical Society},
+  month    = {feb},
+  number   = {04},
+  pages    = {507--522},
+  title    = {{KAM theory: The legacy of Kolmogorov's 1954 paper}},
+  url      = {http://www.ams.org/journal-getitem?pii=S0273-0979-04-01009-2},
+  volume   = {41},
+  year     = {2004}
 }
 
+@article{Guzzo2015,
+  abstract = {The Nekhoroshev theorem has been often indicated in the last decades as the reference theorem for explaining the dynamics of several systems which are stable in the long-term. The Solar System dynamics provides a wide range of possible and useful applications. In fact, despite the complicated models which are used to numerically integrate realistic Solar System dynamics as accurately as possible, when the integrated solutions are chaotic the reliability of the numerical integrations is limited, and a theoretical long-term stability analysis is required. After the first formulation of Nekhoroshev's theorem in 1977, many theoretical improvements have been achieved. On the one hand, alternative proofs of the theorem itself led to consistent improvements of the stability estimates; on the other hand, the extensions which were necessary to apply the theorem to the systems of interest for Solar System Dynamics, in particular concerning the removal of degeneracies and the implementation of computer assisted proofs, have been developed. In this review paper we discuss some of the motivations and the results which have made Nekhoroshev's theorem a reference stability result for many applications in the Solar System dynamics.},
+  author   = {Guzzo, M.},
+  doi      = {10.2298/SAJ1590001G},
+  file     = {:Users/mseri/Documents/Mendeley/Guzzo/Serbian Astronomical Journal/Guzzo - 2015 - The nekhoroshev theorem and long-term stabilities in the solar system.pdf:pdf},
+  issn     = {1450698X},
+  journal  = {Serbian Astronomical Journal},
+  keywords = {Celestial mechanics,Chaos,General,Solar System},
+  number   = {190},
+  pages    = {1--10},
+  title    = {{The Nekhoroshev theorem and long-term stabilities in the solar system}},
+  volume   = {1},
+  year     = {2015}
+}
+
+@misc{lectures:baez,
+  author = {Baez, John C. and Wise, Derek K.},
+  title  = {Lectures on Classical Dynamics},
+  year   = 2005,
+  note   = {Unpublished lecture notes},
+  url    = {http://www.math.ucr.edu/home/baez/classical/texfiles/2005/book/classical_20180116.pdf}
+}
+
+@misc{lectures:dubrovin,
+  author = {Dubrovin, Boris},
+  title  = {Appunti sulla MECCANICA ANALITICA},
+  year   = {2010},
+  note   = {Unpublished lecture notes (in Italian)},
+  url    = {https://archive.org/details/Boris_DUBROVIN___Meccanica_Analitica}
+}
+
+@misc{lectures:tong,
+  author = {Tong, David},
+  title  = {Classical Dynamics},
+  year   = 2005,
+  note   = {Unbpublished lecture notes},
+  url    = {http://www.damtp.cam.ac.uk/user/tong/dynamics/clas.pdf}
+}
+
+@article{Poschel1993,
+  author  = {P{\"{o}}schel, J{\"{u}}rgen},
+  doi     = {10.1007/BF03025718},
+  file    = {:Users/mseri/Documents/Mendeley/P{\"{o}}schel/Mathematische Zeitschrift/P{\"{o}}schel - 1993 - Nekhoroshev estimates for quasi-convex hamiltonian systems.pdf:pdf},
+  issn    = {0025-5874},
+  journal = {Mathematische Zeitschrift},
+  month   = {may},
+  number  = {1},
+  pages   = {187--216},
+  title   = {{Nekhoroshev estimates for quasi-convex hamiltonian systems}},
+  url     = {http://link.springer.com/10.1007/BF03025718},
+  volume  = {213},
+  year    = {1993}
+}
+
+@incollection{poschel2001,
+  author    = {J\"urgen {P\"oschel}},
+  title     = {{A lecture on the classical KAM theorem.}},
+  booktitle = {{Smooth ergodic theory and its applications. Proceedings of the AMS summer research institute, Seattle, WA, USA, July 26--August 13, 1999}},
+  isbn      = {0-8218-2682-4/hbk},
+  pages     = {707--732},
+  year      = {2001},
+  publisher = {Providence, RI: American Mathematical Society (AMS)},
+  msc2010   = {37K55 37J40 37-02 70H08},
+  zbl       = {0999.37053},
+  doi       = {10.1090/pspum/069},
+  url       = {http://www.poschel.de/pbl/kam-1.pdf}
+}
+
+@misc{WikipediaEN:LPS,
+  author = {{Wikimedia Commons}},
+  title  = {Lagrange points},
+  year   = {2009},
+  note   = {[Online; accessed February 20, 2020]},
+  url    = {https://commons.wikimedia.org/wiki/File:Lagrange_points2.svg}
+}
+
+@article{zbMATH05911037,
+  author    = {Jaume {Masoliver} and Ana {Ros}},
+  title     = {{Integrability and chaos: the classical uncertainty.}},
+  fjournal  = {{European Journal of Physics}},
+  journal   = {{Eur. J. Phys.}},
+  issn      = {0143-0807},
+  volume    = {32},
+  number    = {2},
+  pages     = {431--458},
+  year      = {2011},
+  publisher = {IOP Publishing, Bristol},
+  language  = {English},
+  msc2010   = {70H06 70K55 70H14 70-02},
+  zbl       = {1303.70020},
+  url       = {https://www-e.ovgu.de/mertens/teaching/seminar/themen/ejp_integrability_chaos.pdf}
+}
