--- a/main.tex
+++ b/main.tex
@@ -110,10 +110,13 @@ linktoc=page}
 \usepackage{subfiles}
 
 \title{Hamiltonian Mechanics}
-\author{Marcello Seri}
-\date{\today\\
-\vspace{10cm}
-{\small\doclicenseThis}
+\author{Marcello Seri\\
+\small{Bernoulli Institute}\vspace{-.2cm}\\
+\small{University of Groningen}\vspace{-.2cm}\\
+\small\href{mailto:m.seri@rug.nl}{m.seri (at) rug.nl}
+}
+\date{\today\vspace{8.5cm}\\
+\small{\doclicenseThis}
 }
 
 % trick for bibliography in subfiles -- part 1
