minor typos fixed
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/main.tex
+++ b/main.tex
@@ -311,7 +311,7 @@ We will see that the generalization to manifolds is almost immediate.
 In order to leave more space to discuss Hamiltonian systems and their geometry, we will be brief in our account of Lagrangian mechanics and calculus of variations. For a more detailed account refer to \cite[Part II]{book:arnold}.
 This, however, should not confuse you: Lagrangian mechanics plays a role as large as Hamiltonian mechanics in the development of classical mechanics.
 
-In fact, one should not be surprized if there are many sources claiming that the most general formulation of the equations of motion in classical mechanics comes from the \emph{principle of least action} or \emph{Hamilton's variational principle}. Indeed, as we will see this sits at the roots of Lagrangian mechanics and the Euler-Lagrange equations.
+In fact, one should not be surprised if there are many sources claiming that the most general formulation of the equations of motion in classical mechanics comes from the \emph{principle of least action} or \emph{Hamilton's variational principle}. Indeed, as we will see this sits at the roots of Lagrangian mechanics and the Euler-Lagrange equations.
 
 According to this principle, the equations of motion of a mechanical system are characterized by a function $L \equiv L(q, \dot q, t) : T\R^n \times \R \to \R$, called \emph{lagrangian (function)} of the system.
 
@@ -350,7 +350,7 @@ As in the finite-dimensional case, $A$ is uniquely determined and is called \emp
 \begin{remark}
     \begin{enumerate}
         \item In the finite dimensional setting, Fr\'echet differentiability corresponds to total differentiability. In analogy with the finite dimensional case, Fr\'echet's differentiability implies the continuity of the mapping.
-        \item The analogy with the finite dimensional case goes further. Indeed, chian rule, mean value theorem, implicit functions theorem, inverse mapping theorem and statements about local extremes with and without constraints, all hold also for differentiable functions on Banach spaces.
+        \item The analogy with the finite dimensional case goes further. Indeed, chain rule, mean value theorem, implicit functions theorem, inverse mapping theorem and statements about local extremes with and without constraints, all hold also for differentiable functions on Banach spaces.
         \item Requiring the operator $A$ to be bounded is crucial. In $\infty$-dimensional normed spaces, the linearity of an image does not imply continuity.
         \item In calculus of variation, the curve $h$ from the small neighborhood of $0\in X$, is usually called a variation and denoted $\delta x$.
     \end{enumerate}
