--- a/hm.tex
+++ b/hm.tex
@@ -6375,5 +6375,5 @@ The topic is vast, interesting and very actively developed. I hope the selection
 % \end{appendices}
 
 \bibliographystyle{plainnat}
-\bibliography{book}
+\bibliography{hm}
 \end{document} 
