Fix minor malapropism
Pointed out during the review for the AMS Open Math Notes submission

Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -974,7 +974,7 @@ The first thing that this tells us, is that the solutions of \eqref{eq:oscillato
 Furthermore, such timeless equation can be exactly solved!
 
 Let $U(x)$ be such that $F(x) = \frac{\d U}{\d x}$. Define $H(x, y) = \frac12 y^2 + U(x)$, i.e. the sum of the kinetic energy $\frac12 y^2 = \frac12 {\dot x}^2$ of the particle and its potential energy $U$.
-The function $H$ is called the \emph{total energy} of the mechanical system and we are already mocking the notation that we will use when we will describe hamiltonian systems.
+The function $H$ is called the \emph{total energy} of the mechanical system and we are already mimicking the notation that we will use when we will describe hamiltonian systems.
 
 \begin{theorem}\label{thm:ham1}
     Let $H(x, y) := \frac12 y^2 + U(x)$ with $U(x)$ such that $F(x) = \frac{\d U}{\d x}$.
@@ -2603,11 +2603,11 @@ Which seems to bring a nice symmetry between the coordinates and the momenta, an
 Our current quest is then to find a function of $q$ and $p$ (and not of $\dot q$) which contains the same information as the lagrangian $L$, allowing us to determine the unique evolution of $q$ and $p$, but bringing the two variables to more equal footings.
 
 Theorem~\ref{thm:ham1} and Theorem~\ref{thm:conservationEnergy} provided us with some useful hints.
-Before entering into the gist of the matter, let's reason in two dimensions and mock our derivation of Theorem~\ref{thm:ham1}
+Before entering into the gist of the matter, let's reason in two dimensions and mimick our derivation of Theorem~\ref{thm:ham1}
 
 \section{The Legendre Transform in the euclidean plane}
 
-In this section we'll be a bit sloppy, please bear some patience. 
+In this section we'll be a bit sloppy, please bear with me. 
 %
 Let's start considering the total derivative of an arbitrary function $f(x,y)$,
 \begin{equation}
@@ -2635,7 +2635,7 @@ Inverting $x = x(y,u)$, we could write down $g$ explicitly as
     g(y,u) = u x(y,u) - f(x(y, u), y).
 \end{equation}
 
-We have just described an operation which takes a function $f(x,y)$ to a different function $g(y,u)$ where $u = \frac{\partial f}{\partial x}$ \emph{without loosing any information}: we can recover $f(x,y)$ from $g(y,u)$ by observing that
+We have just described an operation which takes a function $f(x,y)$ to a different function $g(y,u)$ where $u = \frac{\partial f}{\partial x}$ \emph{without losing any information}: we can recover $f(x,y)$ from $g(y,u)$ by observing that
 \begin{equation}
     \frac{\partial g}{\partial u} = x
     \quad\mbox{and}\quad
@@ -3234,7 +3234,7 @@ An alternative approach, the so-called \emph{Maupertuis variational principle} c
     \begin{equation}
         \delta \int \left[p_i \dot q^i - \lambda(t)\left(H(q,p) - E\right)\right]\d t = 0,
     \end{equation}
-    which, again mocking the previous proof, reduces to the equations
+    which, again mimicking the previous proof, reduces to the equations
     \begin{equation}
         \dot q^i = \lambda(t) \frac{\partial H}{\partial p_i},
         \quad
