Add bibliography to the toc line
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -6376,4 +6376,5 @@ The topic is vast, interesting and very actively developed. I hope the selection
 
 \bibliographystyle{plainnat}
 \bibliography{hm}
+\addcontentsline{toc}{chapter}{Bibliography}
 \end{document} 
