Correct typos on tautological one-form
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -3879,7 +3879,8 @@ That is, it assigns a numerical value to the momentum $p$ for each velocity $\do
 %
 Moreover, it does it so that they point ``in the same direction'' and it does it linearly, such that the magnitudes grow in proportion.
 %
-Finally, the choice of the assignment is unique: each momentum vector corresponds to only one velocity vector, by definition. In this respect, the tautological one--form can be thought of as a device to convert from Lagrangian mechanics to Hamiltonian mechanics. 
+Finally, the choice of the assignment is unique: each momentum vector corresponds to only one velocity vector, by definition.
+In this respect, the tautological one--form can be thought of as a device to convert from Lagrangian mechanics to Hamiltonian mechanics. 
 
 The name tautological comes from the physical intuition that velocity and momenta are necessarily proportional to one-another.
 \end{remark}
@@ -3896,7 +3897,8 @@ Then, its differential defines a map
 \end{equation}
 between tangent bundles.
 
-Let $x$ be a point on $P$. Since $P$ is the cotangent bundle over $M$, we can think of $x$ as a map of the tangent space at $q := \pi(x)$
+Let $x$ be a point on $P$.
+Since $P$ is the cotangent bundle over $M$, we can think of $x$ as a map of the tangent space at $q := \pi(x)$
 \begin{equation}
     x : T_q M \to \R.
 \end{equation}
@@ -3908,11 +3910,11 @@ Since $\pi_*(x): T_x P \to T_q M$, we define the tautological one--form $\eta(x)
 \end{equation}
 which is a linear map
 \begin{equation}
-    \eta(x):T_xM\to\R.
+    \eta(x):T_xP\to\R.
 \end{equation}
-In other words, recalling that $T^*M = \big\{\phi: TM \to \R \mid \phi\mbox{ linear}\big\}$,
+In other words, recalling that $T^*P = \big\{\phi: TP \to \R \mid \phi\mbox{ linear}\big\}$,
 \begin{equation}
-    \eta : M \to T^* M.
+    \eta : P \to T^* P.
 \end{equation}
 \end{remark}
 
